# IUPC-Rating

./: .gitignore  README.md  environment.yml  grading.ipynb  pyproject.toml
input/grading/: contests.json  credits.json  institutions.json
institution_finder/: README.md  __init__.py  finder.py
institution_finder/data/: institutions.json
parser/: README.md  cli.py  model.py  records.py  repository.py  service.py
parser/implementations/: __init__.py  common.py
parser/implementations/baps/: README.md  (+2 more)
parser/input/: contests.json  options.json
parser/output/: manifest.json
performance_calculator/: README.md  cli.py  model.py  service.py
performance_calculator/implementations/: __init__.py
performance_calculator/input/: options.json
performance_calculator/output/: performances.csv
rating_calculator/: README.md  __init__.py  cli.py  model.py  service.py
rating_calculator/implementations/: __init__.py
rating_calculator/input/: credits.json  options.json
rating_calculator/output/: latest_ratings.csv  rating_rank_history.csv  ratings_history.csv
result/: contests.json  history_cgpa.csv  history_rank.csv  institutions.json  marksheet.csv
score_calculator/: README.md  cli.py  model.py  service.py
score_calculator/implementations/: __init__.py
score_calculator/input/: options.json
score_calculator/output/: score_history.csv  score_rank_history.csv
slot_distributor/: README.md  cli.py  exporter.py  model.py  service.py
slot_distributor/implementations/: __init__.py
tests/: test_institution_finder.py  test_parser.py  test_rating_calculator.py  test_slot_distributor.py  test_utilities.py
utilities/: README.md  add_contest.py  add_institution.py  add_institution_alt_name.py  common.py
(+55 files in other folders)
